# spo_lab1_itmo_spring_2021

./: CMakeLists.txt  Makefile  README.MD  available_devices.c  available_devices.h  check_ntfs.c  check_ntfs.h  main.c  ntfs.c  ntfs.h  ntfs_utils.c  ntfs_utils.h  ntfsutils.c  ntfsutils.h
